# funes

./: .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: _ci.yaml  main.yml
data/: README.md  blood_transfusion_service_center.parquet  funes.db
docs/: index.md  modules.md
funes/catalog/: base.py  glue.py
funes/client/: core.py
funes/examples/: query_from_iceberg.py
funes/query/: duckdb.py  result.py
funes/templates/: duckdb.template
scripts/: project.toml
tests/: test_foo.py
